# zero2prod

./: .env  Cargo.toml  configuration.yaml
migrations/: 20250410092356_create_subscriptions_table.sql
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: health.rs  subscriptions.rs
tests/: health_check.rs  subscriptions.rs
