[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
chrono = "0.4.40"
config = "0.15.11"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "tls-native-tls",
  "postgres",
  "chrono",
  "uuid",
] }
uuid = { version = "1.16.0", features = ["v7"] }
